src with new resource reading adapter