@@ -1,13 +1,15 @@
 package emu.grasscutter.data.excels.tower;
 
 import emu.grasscutter.data.*;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ResourceType(name = "TowerScheduleExcelConfigData.json")
 public class TowerScheduleData extends GameResource {
     private int scheduleId;
-    private List<Integer> entranceFloorId;
-    private List<ScheduleDetail> schedules;
+    private List<Integer> entranceFloorId = new ArrayList<>();
+    private List<ScheduleDetail> schedules = new ArrayList<>();
     private int monthlyLevelConfigId;
 
     @Override
@@ -18,8 +20,16 @@ public class TowerScheduleData extends GameResource {
     @Override
     public void onLoad() {
         super.onLoad();
-        this.schedules =
-                this.schedules.stream().filter(item -> item.getFloorList().size() > 0).toList();
+        try {
+            if (this.schedules != null && !this.schedules.isEmpty()) {
+                this.schedules = this.schedules.stream()
+                        .filter(item -> item != null && item.getFloorList() != null && !item.getFloorList().isEmpty())
+                        .collect(Collectors.toList());
+            }
+        } catch (Exception e) {
+            emu.grasscutter.Grasscutter.getLogger()
+                    .error("Error cleaning TowerScheduleData schedules", e);
+        }
     }
 
     public int getScheduleId() {
@@ -39,7 +49,7 @@ public class TowerScheduleData extends GameResource {
     }
 
     public static class ScheduleDetail {
-        private List<Integer> floorList;
+        private List<Integer> floorList = new ArrayList<>();
 
         public List<Integer> getFloorList() {
             return floorList;
